Renaming and add src directory

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-	"name": "lagan/slug-property-controller",
+	"name": "lagan/property-slug",
 	"type": "library",
 	"description": "Controller for the Lagan slug property. Creates a slug from a string, and checks if it's unique.",
 	"keywords": ["lagan","slug","property","controller"],
@@ -17,7 +17,7 @@
 	},
     "autoload": {
         "psr-4": {
-            "Lagan\\Property\\": "/"
+            "Lagan\\Property\\": "src/"
         }
     }
 }
